<?xml version="1.0"?>
<package format="2">
  <name>raveutils</name>
  <version>0.1.3</version>
  <description>Utilities package for OpenRAVE</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="website">https://crigroup.github.io/raveutils/</url>
  <url type="repository">https://github.com/crigroup/raveutils</url>
  <url type="bugtracker">https://github.com/crigroup/raveutils/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>openrave_catkin</depend>
  <depend>rospy</depend>

  <exec_depend>baldor</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
